fix: contrast changes

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
 :root {
   --mt-header-color-logo-text: #595959;
   --mt-header-color-nav-icons: #3a3a3a;
-  --mt-header-color-nav-links: #6f6f71;
+  --mt-header-color-nav-links: #575757;
   --mt-header-color-subnav-links: #fff;
   --mt-header-menu-items-fint-color:#ffffff8f;
   --mt-header-search-input-color: #D7D7D7;
